# klippa

./: .gitignore  LICENSE  README.md  uninstall.sh
.github/workflows/: ci.yml  release.yml
daemon/: pyproject.toml
daemon/klippad/: __init__.py  __main__.py  config.py  crypto.py  db.py  service.py  store.py  thumbs.py
daemon/tests/: test_config.py  test_crypto.py  test_db.py  test_store.py  test_thumbs.py
docs/: GNOME-UPGRADE.md  README.md  dbus-interface.md  dbus-interface.xml  smoke-checklist.md
extension/klippa@local/: clipboard.js  dbus.js  extension.js  metadata.json  popup.js  prefs.js  stylesheet.css
extension/klippa@local/schemas/: org.gnome.shell.extensions.klippa.gschema.xml
packaging/: build-deb.sh  bump-version.sh  gnome-upgrade.sh  install.sh  klippad.service  nfpm.yaml  pack.sh  uninstall.sh
packaging/deb/: klippa-config  klippa-disable  klippa-enable  klippad.service  postinstall.sh  postremove.sh
